filling in more content

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Portfolio</title>
 </head>
 
@@ -71,17 +72,27 @@
       <h3>My Works</h3>
       <div class="work_display">
         <div class="first_row" style="display: flex;">
+          <div style="flex:1">
+            <a href="https://thecentipede.org/">
+              <img id="image_centipede" src="/Users/johnoh/Desktop/portfolio/src/assets/Screen Shot 2022-04-24 at 7.06.41 PM.png"
+              width="450" height="100">
+           </a>
+           <p>The Centipede Wesbite</p>
+
+          </div>
           <p style="flex:1">
-            thing1
-          </p>
-          <p style="flex:1">
-            thing2
+            <a href="https://github.com/Daffner/Daffner.github.io">
+              <p>
+                Concord Academy AR History Tour Map Component
+              </p>
+            </a>
           </p>
         </div>
         <div class="second_row" style="display: flex;">
-          <p style="flex:1">
-            thing3
-          </p>
+          <div style="flex:1">
+            <img id="poster" src="/Users/johnoh/Desktop/portfolio/src/assets/poster-1.png" width="450" heigth="1500"> 
+            <p>Seoul Tourism Poster Project(Graphic Design)</p>
+          </div>
           <p style="flex:1">
             thing4
           </p>
@@ -130,12 +141,27 @@
             Technology/Science editor of The Centipede
           </p>
         </div>
+        
       </div>
     </div>
+    <div class="section" id="contact">
+      <h3>Contact & Social Media</h3>
+      <div style=" display: flex;  justify-content: center;">
+        <a href="https://www.facebook.com/oh.john.397/" class="fa fa-facebook"></a>
+        <a href="https://www.google.com" class="fa fa-google"></a>
+        <a href="https://www.instagram.com/john_seungjin_oh/" class="fa fa-instagram"></a>
+        <a href="https://github.com/johnyojohn" class="fa fa-github"></a>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/rdpBZ5_b48g" title="YouTube video player"
-      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen></iframe>
+      </div>
+      <p>
+        Email: johanjohnsjo@gmail.com
+      </p>
+      <p>
+        Phone number: 8574047943
+      </p>
+    </div>
+
+    
   </div>
   
 </body>
