--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,11 @@
             <p>Seoul Tourism Poster Project(Graphic Design)</p>
           </div>
           <p style="flex:1">
-            thing4
+            <a href="https://johnjohnhjonh.wpcomstaging.com/">
+              <p>
+                School Medical Club & Vaccination Campaign Website
+              </p>
+            </a>
           </p>
         </div>
       </div>
@@ -102,7 +106,7 @@
 
     <div class="section" id="awards/titles_id">
       <h3>Awards and Titles</h3>
-      <div style=" display: flex;">
+      <div style=" display: flex;" >
         <div style="flex:1">
           <h3> CS</h3>
           <p>USACO Gold</p>
@@ -141,14 +145,14 @@
             Technology/Science editor of The Centipede
           </p>
         </div>
-        
+
       </div>
     </div>
     <div class="section" id="contact">
       <h3>Contact & Social Media</h3>
       <div style=" display: flex;  justify-content: center;">
         <a href="https://www.facebook.com/oh.john.397/" class="fa fa-facebook"></a>
-        <a href="https://www.google.com" class="fa fa-google"></a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=johanjohnsjo@gmail.com&su=subject_here&body=body_here" class="fa fa-google"></a>
         <a href="https://www.instagram.com/john_seungjin_oh/" class="fa fa-instagram"></a>
         <a href="https://github.com/johnyojohn" class="fa fa-github"></a>
 
