--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
   <div class="content">
 
     <div class="container_with_picture">
-      <img src="./assets/beenzino-gq-style.png" alt="Avatar" class="image">
+      <img src="/Users/johnoh/Desktop/portfolio/src/assets/IMG-2828.jpg" alt="Avatar" class="image">
 
       <div>
         <p style="text-align: center; color: white;" class="fade-in-text">
